--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.15",
     "sequelize": "^6.37.3",
     "socket.io": "^4.7.5"
   },
